[package]
name = "firestarter"
version = "0.1.0"
license = "AGPL-3.0-or-later"
# Append other authors below
authors = ["Bert Proesmans <bproesmans@hotmail.com>"]

# Disable usage of a build script
build = false

# Examples and benches are not automatically included within each build
# to reduce total compilation time.
# Look for dependant crates implementing binaries, examples and benchmarks.
autoexamples = false
autobenches = false
autobins = false
autotests = true

[lib]
bench = false

# Definition of the only binary entry point we support within the main crate.
# Look for dependant crates implementing specialized binaries.
[[bin]]
name = "vanilla-server"
path = "src/bin/vanilla_server.rs"

[dependencies]
# In-tree dependancies
firestarter-generated = {path = "../firestarter_generated"}

# Syntax improving libraries
typed-builder = "=0.1.1"

# Logging infrastructure
slog = ">=2.3.2, <2.4.0"
slog-stdlog = ">=3.0.2, <3.1.0"

# Asynchronous programming
tokio = "=0.1.7"
tokio-tcp = "=0.1.0"
tokio-executor = "=0.1.2"
tokio-codec = "=0.1.0"
futures = ">=0.1.23, <0.2.0"

# Error handling
failure = "=0.1.1"
error-chain = ">=0.12.0, <0.13.0"

# General
prost = ">=0.4.0, <0.5.0"
bytes = ">=0.4.0, <0.5.0"


[features]

[dev-dependancies]
